@startuml Class Diagram 1

title general class diagram (I)

class SingletonMeta {
    
}

class Director {

}

class ResolutionSettings {
    
}

class DifficultySettings {

}

class Game {
    
}

abstract class Scene {

}

class Level {

}

class GameOver {
   
}

class Camera {
    
}

class Background {

}

abstract class Menu {
    
}

class MainMenu {
    
}

class PauseMenu {
    
}

class SettingsMenu {
    
}

class VictoryMenu {

}

class HUD {
    
}

SingletonMeta <|.. Director
SingletonMeta <|.. ResolutionSettings
SingletonMeta <|.. DifficultySettings
SingletonMeta <|.. Game

Director <--> Scene

Game <--> Level

Scene <|-down- Level
Scene <|-- GameOver
Scene <|-- Menu

Level --> Camera
Level --> Background
Level --> HUD
Level --> PauseMenu

Menu <|-- MainMenu
Menu <|-- PauseMenu
Menu <|-- SettingsMenu
Menu <|-- VictoryMenu

@enduml